--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </div>
     <div class=" centered ">
         <h1 class=" animate-zoom "> Map here </h1>
-        <iframe> https://github.com/We-Fly/wefly/blob/Mahesh/data/city.geojson </iframe>
+        <iframe src="https://github.com/We-Fly/wefly/blob/Mahesh/data/city.geojson" height="75%" width="95%"></iframe>
     </div>
 
     
