--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   
     <div id="map" class=" centered " >
         <h1 > Map here </h1>
-      <iframe src="https://search-wefly-ndmsaxpla3qpn2wtwbevnaig24.us-west-1.es.amazonaws.com/_plugin/kibana/app/kibana#/visualize/edit/91c5ffd0-c46a-11e8-99ce-bd7196a584c5?embed=true&_g=()" height="75%" width="95%"></iframe>
+      <iframe src="https://search-wefly-ndmsaxpla3qpn2wtwbevnaig24.us-west-1.es.amazonaws.com/_plugin/kibana/goto/eae2cc77b05cd7110ba5bb15327a96c0?embed=true" height="75%" width="95%"></iframe>
     
     </div>
 
