--- a/Core/client/index.html
+++ b/Core/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVMkvhMRr5sz5brYAjXjqq3l0laIsWT0Q" async defer></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css' rel='stylesheet' />
     <title>client</title>
   </head>
   <body>
